# smart-genai-bot

./: .gitignore  LICENSE  README.md  Smart_Academic_Assistant.pptx  Smart_Academic_Assistant_1.pptx  Smart_Academic_Assistant_2.pptx  Smart_Academic_Assistant_3.pptx  Smart_Academic_Assistant_4.pptx  Smart_Academic_Assistant_5.pptx  Smart_Academic_Assistant_6.pptx  USER_MANUAL.md  extract_pdf.py  gitauth.txt  ingest.py  make_ppt.py  pyproject.toml  query.py  rag_bot.py  server.py  test_todo.txt
eval/knowledge/: KB.py  student.py
eval/knowledge/previous_knowledgebase/: m01_transformers.json  m02_gans.json
extracted_data/: catalog_rules.json  transcript_record.json
frontend/: index.html
processed data/: creating-advanced-prompts.txt  introToGenAI.txt  using-generative-ai-responsibly.txt
processed_data/: 02-gen-ai-prompt-engineering-approaches.txt  02-gen-ai-prompt-engineering-approaches_2.txt  03-gen-ai.txt  05-gen-ai.txt  06-gen-ai.txt  09-gen-ai.txt  10-gen-ai.txt  11-gen-ai.txt  12-gen-ai.txt  13-gen-ai.txt  14-gen-ai.txt  15-gen-ai.txt  16-gen-ai.txt  17-gen-ai.txt  Advanced_GAN__2026_Spring-CSCI-4440-M01_CSCI-5440-M01-GENERATIVE_AI.txt  AgentQ.txt  Autoencoders_and_Variational_Autoencoders___2026_Spring-CSCI-4440-M01_CSCI-5440-M01-GENERATIVE_AI.txt  Autoregressive_Models___2026_Spring-CSCI-4440-M01_CSCI-5440-M01-GENERATIVE_AI.txt  Class_Information_and_Introduction_to_AI_GenAI__2026_Spring-CSCI-4440-M01_CSCI-5440-M01-GENERATIVE_AI.txt  Deep_Learning___2026_Spring-CSCI-4440-M01_CSCI-5440-M01-GENERATIVE_AI.txt  Diffusion_Models__2026_Spring-CSCI-4440-M01_CSCI-5440-M01-GENERATIVE_AI.txt  Energy_Based_Models__2026_Spring-CSCI-4440-M01_CSCI-5440-M01-GENERATIVE_AI.txt  Generative_Adversarial_Networks__2026_Spring-CSCI-4440-M01_CSCI-5440-M01-GENERATIVE_AI.txt  LLM_and_Prompting__2026_Spring-CSCI-4440-M01_CSCI-5440-M01-GENERATIVE_AI.txt  Multimodal_Model___2026_Spring-CSCI-4440-M01_CSCI-5440-M01-GENERATIVE_AI.txt  Music_Generation__2026_Spring-CSCI-4440-M01_CSCI-5440-M01-GENERATIVE_AI.txt  Normalizing_Floow_Models__2026_Spring-CSCI-4440-M01_CSCI-5440-M01-GENERATIVE_AI.txt  The Journey of Neuron from Perceptron to Transformers.txt  Transformer__2026_Spring-CSCI-4440-M01_CSCI-5440-M01-GENERATIVE_AI.txt  World_Model__2026_Spring-CSCI-4440-M01_CSCI-5440-M01-GENERATIVE_AI.txt  coding_with_gemini.txt  deepLearning.txt  exploring-and-comparing-different-llms.txt  pretrain_prompt_predict_prompt_engineer_survey.txt  some_approaches_to_prompt_engineering.txt  test.txt  understanding-prompt-engineering-fundamentals.txt  vae.txt
processed_data/pdf/: 04-gen-ai.txt  07-gen-ai.txt  08-gen-ai.txt  Agentic_AI___2026_Spring-CSCI-4440-M01_CSCI-5440-M01-GENERATIVE_AI.txt  prompt_engineering_systematic_survey.txt
processed_data/video/: module_5_output.txt  other_approaches_to_prompt_engineering.txt
static/: app.js  index.html  style.css
