[project]
name = "smart-genai-bot"
version = "0.1.0"
description = "Dynamic academic assistant with retrieval, catalog parsing, transcript parsing, file upload, and reasoning."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [
  { name = "Mei, Tathagata, Zaman" }
]
keywords = [
  "rag",
  "agentic-rag",
  "langgraph",
  "llamaindex",
  "openai",
  "fastapi",
  "chatbot",
  "citations",
  "academic-advising",
  "transcript-parser"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

dependencies = [
  "beautifulsoup4>=4.12.0",
  "fastapi>=0.115.0",
  "langgraph>=0.2.0",
  "llama-index>=0.12.0",
  "llama-index-readers-file>=0.4.0",
  "openai>=1.50.0",
  "pydantic>=2.9.0",
  "pypdf>=5.0.0",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.9",
  "requests>=2.32.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
  "server.py",
  "rag_bot.py",
  "__init__.py",
  "frontend/**",
  "processed_data/**",
  "extracted_data/**",
  "uploads/**",
  "README.md",
  "LICENSE"
]

[tool.hatch.build.targets.sdist]
include = [
  "server.py",
  "rag_bot.py",
  "__init__.py",
  "frontend/**",
  "processed_data/**",
  "extracted_data/**",
  "uploads/**",
  "README.md",
  "LICENSE",
  "pyproject.toml"
]
